--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^18.0.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@types/react": "~18.0.27",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
@@ -21,7 +22,9 @@
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.10",
     "typescript": "^4.9.4",
-    "@types/react": "~18.0.27"
+    "expo-image-picker": "~14.1.1",
+    "expo-checkbox": "~2.3.1",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
