--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "typescript": "^4.9.4",
     "expo-image-picker": "~14.1.1",
     "expo-checkbox": "~2.3.1",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "expo-camera": "~13.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
